--- a/package.json
+++ b/package.json
@@ -38,18 +38,18 @@
     "@babel/plugin-syntax-import-meta": "7.8.3",
     "@babel/plugin-transform-runtime": "7.9.0",
     "@babel/preset-env": "7.9.0",
-    "@babel/preset-react": "7.9.1",
+    "@babel/preset-react": "7.9.4",
     "@octetstream/eslint-config": "4.0.0",
-    "@open-wc/webpack-import-meta-loader": "0.4.3",
+    "@open-wc/webpack-import-meta-loader": "0.4.4",
     "@svgr/webpack": "5.3.0",
-    "autoprefixer": "9.7.4",
+    "autoprefixer": "9.7.5",
     "ava": "3.5.1",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.1.0",
     "babel-plugin-emotion": "10.0.29",
     "babel-plugin-module-resolver": "4.0.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
-    "caniuse-lite": "1.0.30001036",
+    "caniuse-lite": "1.0.30001038",
     "css-loader": "3.4.2",
     "cssnano": "4.1.10",
     "decss-loader": "0.3.0",
@@ -61,15 +61,15 @@
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.19.0",
-    "eslint-plugin-react-hooks": "2.5.1",
+    "eslint-plugin-react-hooks": "3.0.0",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
     "favicons-webpack-plugin": "3.0.1",
     "graphql-tag": "2.10.3",
     "html-webpack-harddisk-plugin": "1.0.1",
-    "html-webpack-plugin": "4.0.0-beta.11",
+    "html-webpack-plugin": "4.0.2",
     "husky": "4.2.3",
     "js-yaml": "3.13.1",
-    "lint-staged": "10.0.8",
+    "lint-staged": "10.0.9",
     "lost": "8.3.1",
     "mini-css-extract-plugin": "0.9.0",
     "mkdirp": "1.0.3",
@@ -82,7 +82,7 @@
     "postcss-property-lookup": "2.0.0",
     "postcss-use": "3.0.0",
     "react-dev-utils": "10.2.1",
-    "react-dropzone": "10.2.1",
+    "react-dropzone": "10.2.2",
     "react-hot-loader": "4.12.20",
     "react-svg-loader": "3.0.3",
     "rimraf": "3.0.2",
@@ -94,7 +94,7 @@
     "svgo-loader": "2.2.1",
     "terser-webpack-plugin": "2.3.5",
     "uglifyjs-webpack-plugin": "2.2.0",
-    "webpack": "4.42.0",
+    "webpack": "4.42.1",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "3.10.3"
   },
@@ -102,8 +102,8 @@
     "@babel/runtime": "7.9.2",
     "@casl/ability": "3.4.0",
     "@casl/react": "1.0.4",
-    "@fortawesome/fontawesome-svg-core": "1.2.27",
-    "@fortawesome/free-solid-svg-icons": "5.12.1",
+    "@fortawesome/fontawesome-svg-core": "1.2.28",
+    "@fortawesome/free-solid-svg-icons": "5.13.0",
     "@fortawesome/react-fontawesome": "0.1.9",
     "@hot-loader/react-dom": "npm:react-dom",
     "@octetstream/invariant": "1.2.0",
@@ -116,9 +116,9 @@
     "apollo-link-error": "1.1.12",
     "apollo-link-form-data": "1.1.0",
     "classnames": "2.2.6",
-    "date-fns": "2.11.0",
+    "date-fns": "2.11.1",
     "decss": "0.8.0",
-    "draft-js": "0.11.4",
+    "draft-js": "0.11.5",
     "graphql": "14.6.0",
     "js-flock": "3.13.0",
     "koa": "2.11.0",
@@ -147,7 +147,7 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-spinners": "0.8.1",
-    "react-use": "13.27.0",
+    "react-use": "13.27.1",
     "use-events": "1.4.1",
     "use-suspender": "0.3.0",
     "validate.js": "0.13.1",
